<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ExpandingScrollTest</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="action_settings">Settings</string>
    <string name="pane_1_title">Pane 1 - Blue</string>
    <string name="pane_2_title">Pane 2 - Red</string>
    <string name="pane_3_title">Pane 3 - Yellow</string>
    <string name="pane_4_title">Pane 4 - Green</string>
    <string name="pane_5_title">Pane 5 - Purple</string>
    <string name="pane_6_title">Pane 6 - Teal</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="hello_world">Hello world!</string>

</resources>
